[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/session/sentence_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/session/sentence_panel.gd" type="Script" id=2]

[node name="SentencesPanel" type="Panel"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SentenceContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SentenceLabel" parent="SentenceContainer" instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 25.0
size_flags_vertical = 4

[node name="VariantsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
